check result dimensions before offering xlsx format